--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="telmoapp.com.telmoapp" >
+    package="telmoapp.com.telmoapp">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".IndexActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,7 +18,16 @@
         </activity>
         <activity
             android:name=".calification"
-            android:label="@string/title_activity_calification" >
+            android:label="@string/title_activity_calification"></activity>
+        <activity
+            android:name=".ListarMotelesActivity"
+            android:label="@string/title_activity_listar_moteles">
+            <intent-filter>
+                <action android:name="telmoapp.ListarMotelesActivity" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+
         </activity>
     </application>
 
