--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,11 @@
         <activity
             android:name=".calification"
             android:label="@string/title_activity_calification" />
+        <intent-filter>
+            <action android:name="telmoapp.calification" />
+
+            <category android:name="android.intent.category.DEFAULT" />
+        </intent-filter>
         <activity
             android:name=".ListarMotelesActivity"
             android:label="@string/title_activity_listar_moteles" >
@@ -31,18 +36,38 @@
         <activity
             android:name=".recomendations"
             android:label="@string/title_activity_recomendations" >
+            <intent-filter>
+                <action android:name="telmoapp.recomendations" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".bestCalification"
             android:label="@string/title_activity_best_calification" >
+            <intent-filter>
+                <action android:name="telmoapp.bestCalification" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".sexShop"
-            android:label="@string/title_activity_sex_shop" >
+            android:label="@string/subtittle_sexShop" >
+            <intent-filter>
+                <action android:name="telmoapp.sexShop" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".motelsNearby"
             android:label="@string/title_activity_motels_nearby" >
+            <intent-filter>
+                <action android:name="telmoapp.motelsNearby" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
     </application>
 
