--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,89 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="telmoapp.com.telmoapp" >
+    package="telmoapp.com.telmoapp">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/logo"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".IndexActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+         </activity>
+
         <activity
             android:name=".calification"
-            android:label="@string/title_activity_calification" />
+            android:label="@string/title_activity_calification">
 
-        <intent-filter>
-            <action android:name="telmoapp.calification" />
-
-            <category android:name="android.intent.category.DEFAULT" />
-        </intent-filter>
-
-        <activity
-            android:name=".ListarMotelesActivity"
-            android:label="@string/title_activity_listar_moteles" >
             <intent-filter>
-                <action android:name="telmoapp.ListarMotelesActivity" />
+                <action android:name="telmoapp.calification" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ListarMotelesActivity"
+            android:label="@string/title_activity_listar_moteles">
+            <intent-filter>
+                <action android:name="telmoapp.ListarMotelesActivity" />
+
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+
         <activity
             android:name=".motelsNearby"
-            android:label="@string/title_activity_motels_nearby" >
+            android:label="@string/title_activity_motels_nearby">
             <intent-filter>
                 <action android:name="telmoapp.motelsNearby" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".recomendations"
-            android:label="@string/title_activity_recomendations" >
+            android:label="@string/title_activity_recomendations">
             <intent-filter>
                 <action android:name="telmoapp.recomendations" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".bestCalification"
-            android:label="@string/title_activity_best_calification" >
+            android:label="@string/title_activity_best_calification">
             <intent-filter>
                 <action android:name="telmoapp.bestCalification" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".sexShop"
-            android:label="@string/subtittle_sexShop" >
+            android:label="@string/subtittle_sexShop">
             <intent-filter>
                 <action android:name="telmoapp.sexShop" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".motelProfile"
-            android:label="@string/title_activity_motel_profile" >
+            android:label="@string/title_activity_motel_profile">
             <intent-filter>
                 <action android:name="telmoapp.motelProfile" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".sexShopProfile"
-            android:label="@string/title_activity_sex_shop_profile" >
-        </activity>
+            android:label="@string/title_activity_sex_shop_profile"></activity>
     </application>
 
 </manifest>
