--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,7 @@ android {
 }
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-
     compile 'com.google.android.gms:play-services:7.8.0'
     compile 'com.android.support:appcompat-v7:23.1.0'
-    compile project(':volley')
+    compile 'com.mcxiaoke.volley:library:1.0.+'
 }
