--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
 
         <activity
             android:name=".IndexActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -33,7 +34,8 @@
         </activity>
         <activity
             android:name=".calification"
-            android:label="@string/title_activity_calification" >
+            android:label="@string/title_activity_calification"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="telmoapp.calification" />
 
@@ -43,7 +45,8 @@
 
         <activity
             android:name=".ListarMotelesActivity"
-            android:label="@string/title_activity_listar_moteles" >
+            android:label="@string/title_activity_listar_moteles"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="telmoapp.ListarMotelesActivity" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -52,7 +55,8 @@
 
         <activity
             android:name=".motelProfile"
-            android:label="@string/title_activity_motel_profile" >
+            android:label="@string/title_activity_motel_profile"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="telmoapp.motelProfile" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -62,7 +66,8 @@
 
         <activity
             android:name=".motelsNearby"
-            android:label="@string/title_activity_motels_nearby" >
+            android:label="@string/title_activity_motels_nearby"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="telmoapp.motelsNearby" />
 
@@ -72,7 +77,8 @@
 
         <activity
             android:name=".recomendations"
-            android:label="@string/title_activity_recomendations" >
+            android:label="@string/title_activity_recomendations"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="telmoapp.recomendations" />
 
@@ -82,7 +88,8 @@
 
         <activity
             android:name=".bestCalification"
-            android:label="@string/title_activity_best_calification" >
+            android:label="@string/title_activity_best_calification"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="telmoapp.bestCalification" />
 
@@ -92,7 +99,8 @@
 
         <activity
             android:name=".sexShop"
-            android:label="@string/subtittle_sexShop" >
+            android:label="@string/subtittle_sexShop"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="telmoapp.sexShop" />
 
@@ -102,7 +110,8 @@
 
         <activity
             android:name=".sexShopProfile"
-            android:label="@string/title_activity_sex_shop_profile" >
+            android:label="@string/title_activity_sex_shop_profile"
+            android:theme="@style/AppTheme">
         </activity>
 
         <meta-data
@@ -114,7 +123,8 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps" >
+            android:label="@string/title_activity_maps"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="telmoapp.MapsActivity" />
 
@@ -123,7 +133,8 @@
         </activity>
         <activity
             android:name=".costum_listar_moteles"
-            android:label="@string/title_activity_costum_listar_moteles" >
+            android:label="@string/title_activity_costum_listar_moteles"
+            android:theme="@style/AppTheme">
         </activity>
     </application>
 
